<resources>
    <string name="app_name">Star Wars</string>
    <string name="error">Error</string>
    <string name="birth_year">Birth Year</string>
    <string name="colon">&#160;:&#160;</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
</resources>