<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">

    <ImageView
        android:id="@+id/imageViewDetails"
        android:layout_width="0dp"
        android:layout_height="@dimen/details_image_width"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="#AA232323"
        android:gravity="center"
        android:padding="@dimen/tv_name_padding"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetails">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_year" />

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvBirthYear"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvGender"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvHeight"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass" />

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvMass"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eye_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEyeColor"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair_color" />

            <TextView
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon" />

            <TextView
                android:id="@+id/tvHairColor"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/min_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skin_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSkinColor"
                style="@style/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>